# find-evil-hackathon

./: .gitignore  EVIDENCE.md  INSTALL.md  JUDGES.md  LICENSE  README.md  pyproject.toml
agents/: orchestrator.py
agents/validator/: extract.py  prose_check.py  validate.py
docs/: ACCURACY_REPORT.md  ARCHITECTURE.md  DEMO_SCRIPT.md  DEVPOST.md  MITRE_COVERAGE.md
eval/agents/sift_owl_v0/: prompt.md  run.py
eval/agents/sift_owl_v1/: prompt-test2-stark-apt-disk.md  prompt-test2-stark-apt.md  prompt.md  run.py
eval/agents/sift_owl_v2/: prompt-rocba-001.md  prompt-test2-stark-apt-v3.md  prompt-test3-shieldbase.md  prompt-test4-vanko.md  prompt-vanko-demo.md  run_loop.py
eval/baselines/protocol_sift/: README.md  prompt.md  prompt_stark_apt.md  run.py
eval/cases/: README.md
eval/cases/rocba-001/: case.md  case.yaml
eval/cases/rocba-001/intake/: Rocba-Memory.raw.sha256  rocba_evidence_hashes.json  rocba_windows_info.txt
eval/cases/test2-stark-apt/: case.md  case.yaml
eval/cases/test2-stark-apt/intake/hashes/: dc-disk.sha256  dc-mem.sha256  nfury-disk.sha256  nfury-mem.sha256  nromanoff-disk.sha256  nromanoff-mem.sha256  tdungan-disk.sha256  tdungan-mem.sha256
eval/cases/test2-stark-apt/intake/windows_info/: dc.txt  nfury.txt  nromanoff.txt  tdungan.txt
eval/cases/test3-shieldbase/: case.md  case.yaml
eval/cases/test3-shieldbase/intake/acquisition_md5/: base-admin-memory.md5  base-av-memory.md5  base-dc-memory.md5  base-elf-memory.md5  base-file-memory.md5  base-file-snapshot5.md5  base-hunt-memory.md5  base-mail-memory.md5  base-rd-02-memory.md5  base-rd-03-memory.md5  base-rd-04-memory.md5  base-rd-05-memory.md5  base-rd-06-memory.md5  base-rd01-memory.md5  base-sp-memory.md5  base-wkstn-01-memory.md5  base-wkstn-02-memory.md5  base-wkstn-03-memory.md5  base-wkstn-04-memory.md5  base-wkstn-05-memory.md5  base-wkstn-06-memory.md5
eval/cases/test3-shieldbase/intake/hashes/: disk.sha256  memory.sha256
eval/cases/test4-vanko/: case.md  case.yaml
eval/cases/vanko-demo/: case.md  case.yaml
eval/results/rocba-001/baseline-protocol-sift/20260509T051815Z-sonnet/: REPORT.md  final_response.md  run_meta.json  summary.json  tool_calls.jsonl
mcp_server/: audit.py  server.py
mcp_server/parsers/: disk.py  ez_tools.py  threat_hunt.py  vol3.py
mcp_server/recmd_batches/: triage_persistence.reb
mcp_server/tools/: _common.py  disk.py  ez_tools.py  memory.py  threat_hunt.py
mcp_server/yara_rules/: sift_owl_starter.yar
plans/: Devpost.html  MASTER_PLAN.md  MCP_TOOL_ROADMAP.md
prompts/: setup-new-case.md
scripts/: bootstrap_sift_tools.sh  demo_open_artifacts.sh  demo_run.sh  demo_setup.sh  revalidate_with_llm.sh  verify_evidence_hashes.py
tests/: test_audit.py  test_disk_e2e.py  test_disk_parsers.py  test_ez_tools_e2e.py  test_ez_tools_parsers.py  test_mcp_server.py  test_self_correction.py  test_threat_hunt_parsers.py  test_truncate_and_query.py  test_validator.py  test_vol3_image_info.py  test_vol3_jsonl_parsers.py  test_vol3_memory_e2e.py  test_vol3_parsers.py
tests/fixtures/ez_tools/: evtx_head.json  jumplist_head.json  mft_head.json  persistence_keys_sample.csv  prefetch_head.json  recyclebin_head.json  shimcache_head.csv  task_xml_sample.xml
tests/fixtures/ez_tools/amcache_sample/: 20240101010101_Amcache_DriverBinaries.csv  20240101010101_Amcache_ProgramEntries.csv  20240101010101_Amcache_UnassociatedFileEntries.csv
tests/fixtures/ez_tools/srum_sample/: 20240101010101_SrumECmd_AppResourceUseInfo.csv  20240101010101_SrumECmd_NetworkUsages.csv
tests/fixtures/threat_hunt/: bstrings_sample.txt  vadyarascan_head.jsonl  yara_output.txt
tests/fixtures/threat_hunt/bulk_extractor_sample/: email.txt  ip.txt  url.txt  winpe.txt
tests/fixtures/vol3_jsonl/: cachedump_head.jsonl  cmdline_head.jsonl  dlllist_head.jsonl  envars_head.jsonl  filescan_head.jsonl  handles_head.jsonl  hashdump_head.jsonl  malfind_head.jsonl  netscan_head.jsonl  psscan_head.jsonl  pstree_head.jsonl  scheduled_tasks_head.jsonl  skeleton_key_head.jsonl  svcscan_head.jsonl  userassist_head.jsonl
(+393 files in other folders)
