[project]
name = "sift-owl"
version = "0.1.0"
description = "Autonomous DFIR agent for SANS SIFT — Custom MCP Server + Multi-Agent Orchestrator. Submission for the FIND EVIL! hackathon."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
  { name = "timietti", email = "miettinen.timo@gmail.com" }
]

dependencies = [
  # MCP server SDK
  "mcp>=1.0,<2.0",
  # Anthropic SDK for orchestrator/specialists
  "anthropic>=0.39,<1.0",
  # Multi-agent orchestration (state-machine style w/ termination caps)
  "langgraph>=0.2,<0.3",
  "langchain-core>=0.3,<0.4",
  "langchain-anthropic>=0.3,<0.4",
  # Structured logging / audit
  "pydantic>=2.7,<3.0",
  "structlog>=24.1,<25.0",
  # CSV/JSON parsing for tool outputs
  "pandas>=2.2,<3.0",
  "orjson>=3.10,<4.0",
  # CLI + DX
  "rich>=13.7,<14.0",
  "typer>=0.12,<0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
]
report = [
  # PDF reporting (matches Protocol SIFT's WeasyPrint helper)
  "weasyprint>=62,<70",
]

[project.scripts]
sift-owl = "agents.orchestrator:main"
sift-mcp = "mcp_server.server:main"
sift-validate = "agents.validator.validate:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_server*", "agents*", "agents.validator", "eval*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "slow: tests that take >30 seconds — deselected by default in CI with `-m 'not slow'`",
]
